<resources>
    <string name="app_name">AssurePayroll</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Assure PayRoll</string>
    <string name="nav_header_subtitle">User Name</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_leave">Leave</string>
    <string name="menu_payslip">Generate Payslip</string>
    <string name="menu_attendance">Attendance</string>
    <string name="menu_employee">Employees</string>
    <string name="menu_addemp">Add Employee</string>
    <string name="menu_logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>