<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_leave"
            android:icon="@drawable/ic_leave"
            android:title="@string/menu_leave" />

        <item
            android:id="@+id/nav_payslip"
            android:icon="@drawable/ic_payslip"
            android:title="@string/menu_payslip" />

        <item
            android:id="@+id/nav_addemp"
            android:icon="@drawable/ic_addemp"
            android:title="@string/menu_addemp" />

        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout" />
    </group>
</menu>