<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.assurepayroll.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.assurepayroll.ui.gallery.GalleryFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.assurepayroll.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_attendance"
        android:name="com.example.assurepayroll.ui.gallery.GalleryFragment"
        android:label="Attendance"
        tools:layout="@layout/admin_activity_attendance"
        />

    <fragment
        android:id="@+id/nav_payslip"
        android:name="com.example.assurepayroll.ui.gallery.GalleryFragment"
        android:label="Payslip"
        tools:layout="@layout/admin_activity_payslip"
        />

    <fragment
        android:id="@+id/nav_addemp"
        android:name="com.example.assurepayroll.Addemo"
        android:label="@string/menu_addemp"
        tools:layout="@layout/addemp_fragment"
        />

</navigation>